[gd_scene load_steps=5 format=2]

[ext_resource path="res://Player.gd" type="Script" id=1]
[ext_resource path="res://soldier.png" type="Texture" id=2]
[ext_resource path="res://Laser_Shoot.wav" type="AudioStream" id=3]

[sub_resource type="CircleShape2D" id=1]

custom_solver_bias = 0.0
radius = 20.0

[node name="Player" type="KinematicBody2D"]

rotation = 0.00470445
input_pickable = false
collision_layer = 1
collision_mask = 1
collision/safe_margin = 0.08
script = ExtResource( 1 )
_sections_unfolded = [ "Pause" ]

[node name="CollisionShape2D" type="CollisionShape2D" parent="." index="0"]

shape = SubResource( 1 )

[node name="Sprite" type="Sprite" parent="." index="1"]

position = Vector2( 16.3125, -1.50247 )
texture = ExtResource( 2 )

[node name="RayCast2D" type="RayCast2D" parent="." index="2"]

position = Vector2( -0.735107, 0.735092 )
enabled = true
exclude_parent = true
cast_to = Vector2( 2000, 0 )
collision_mask = 1

[node name="LineEmitter" type="Node" parent="." index="3"]

[node name="Line2D" type="Line2D" parent="LineEmitter" index="0"]

points = PoolVector2Array(  )
width = 4.0
default_color = Color( 0.875, 1, 0, 1 )
sharp_limit = 2.0
round_precision = 8
_sections_unfolded = [ "Transform" ]

[node name="LineHolder" type="Position2D" parent="." index="4"]

position = Vector2( 40, 5.5 )
_sections_unfolded = [ "Transform" ]

[node name="StunGunSFX" type="AudioStreamPlayer2D" parent="." index="5"]

stream = ExtResource( 3 )
volume_db = 0.0
pitch_scale = 1.0
autoplay = false
max_distance = 2000.0
attenuation = 1.0
bus = "Master"
area_mask = 1


